welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:5: error: not found: value Direction
if(isFacingWall() && getDirection() == Direction.EAST) {
                                       ^